--- a/index.html
+++ b/index.html
@@ -11,8 +11,16 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     />
+</head>
 
 <body>
+    <div class="container">
+        <div class="my-5 text-center">
+          <h1 class="fw-semibold">Bootstrap 5 Responsive Grid</h1>
+          <h2 class="h5">
+            Layout a griglia con diversi breakpoint (sm, md, lg).
+          </h2>
+        </div>
     
 </body>
 </html>
