--- a/index.html
+++ b/index.html
@@ -21,6 +21,24 @@
             Layout a griglia con diversi breakpoint (sm, md, lg).
           </h2>
         </div>
+        <div class="row text-white">
+            <div class="col-12">
+              <div class="row mb-4 row-cols-1 row-cols-md-2">
+                <div class="col-lg-4 bg-light text-dark p-4">
+                  <h3 class="fw-semibold">Colonna 1</h3>
+                  <p>
+                    Larghezza intera su dispositivi piccoli, metà larghezza su
+                    dispositivi medi e un terzo su dispositivi grandi.
+                  </p>
+                </div>
+                <div class="col-lg-8 bg-secondary p-4">
+                  <h3 class="fw-semibold">Colonna 2</h3>
+                  <p>
+                    Larghezza intera su dispositivi piccoli, metà larghezza su
+                    dispositivi medi e due terzi su dispositivi grandi.
+                  </p>
+                </div>
+              </div>
     
 </body>
 </html>
