--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bootstrap 5 Responsive Grid</title>
     
 
     <!-- Bootstrap -->
@@ -39,6 +39,29 @@
                   </p>
                 </div>
               </div>
+              <div class="row mb-4 row-cols-md-3">
+                <div class="col-6 bg-primary p-4">
+                  <h3 class="fw-semibold">Colonna 1</h3>
+                  <p>
+                    Metà larghezza su dispositivi piccoli e un terzo su dispositivi
+                    medi e piü grandi.
+                  </p>
+                </div>
+                <div class="col-6 bg-success p-4">
+                    <h3 class="fw-semibold">Colonna 2</h3>
+                    <p>
+                      Metà larghezza su dispositivi piccoli e un terzo su dispositivi
+                      medi e piü grandi.
+                    </p>
+                  </div>
+                  <div class="col-12 bg-danger p-4">
+                    <h3 class="fw-semibold">Colonna 3</h3>
+                    <p>
+                      Larghezza intera su dispositivi piccoli (col-12) e un terzo su
+                      dispositivi medi e pii grandi.
+                    </p>
+                  </div>
+                </div>
     
 </body>
 </html>
