--- a/index.html
+++ b/index.html
@@ -62,6 +62,28 @@
                     </p>
                   </div>
                 </div>
+                <div class="row row-cols-2 row-cols-md-4">
+                    <div class="bg-info p-4">
+                      <h3 class="fw-semibold">Colonna 1</h3>
+                      <p>
+                        Metà larghezza su dispositivi piccoli e un quarto su dispositivi
+                        medi e pii grandi.
+                      </p>
+                    </div>
+                    <div class="bg-warning p-4">
+                      <h3 class="fw-semibold">Colonna 2</h3>
+                      <p>
+                        Metà larghezza su dispositivi piccoli e un quarto su dispositivi
+                        medi e pii grandi.
+                      </p>
+                    </div>
+                    <div class="bg-dark p-4">
+                      <h3 class="fw-semibold">Colonna 3</h3>
+                      <p>
+                        Metà larghezza su dispositivi piccoli e un quarto su dispositivi
+                        medi e pii grandi.
+                      </p>
+                    </div>
     
 </body>
 </html>
